--- a/bib/references.bib
+++ b/bib/references.bib
@@ -5,7 +5,8 @@
   pages = {173-182},
   year = {2017},
   doi = {10.1145/3038912.3052569},
-  keywords = {neural networks, collaborative filtering, recommendation systems}
+  keywords = {neural networks, collaborative filtering, recommendation systems},
+  type = {Deep Learning Techniques}
 }
 
 @inproceedings{liang2018variational,
@@ -15,7 +16,8 @@
   pages = {689-698},
   year = {2018},
   doi = {10.1145/3178876.3186150},
-  keywords = {autoencoders, collaborative filtering, recommendation systems}
+  keywords = {autoencoders, collaborative filtering, recommendation systems},
+  type = {Deep Learning Techniques}
 }
 
 @inproceedings{rendle2020neural,
@@ -25,7 +27,8 @@
   pages = {240-248},
   year = {2020},
   doi = {10.1145/3383313.3412488},
-  keywords = {neural collaborative filtering, matrix factorization, recommendation systems}
+  keywords = {neural collaborative filtering, matrix factorization, recommendation systems},
+  type = {Algorithmic Advancements}
 }
 
 @inproceedings{he2020lightgcn,
@@ -35,7 +38,8 @@
   pages = {639-648},
   year = {2020},
   doi = {10.1145/3397271.3401063},
-  keywords = {LightGCN, graph convolution networks, recommendation systems}
+  keywords = {LightGCN, graph convolution networks, recommendation systems},
+  type = {Algorithmic Advancements}
 }
 
 @inproceedings{chen2021graph,
@@ -48,7 +52,8 @@
   pages = {3958-3966},
   year = {2021},
   doi = {10.1609/aaai.v35i5.16523},
-  keywords = {heterogeneous graphs, multi-relational recommendation, graph neural networks}
+  keywords = {heterogeneous graphs, multi-relational recommendation, graph neural networks},
+  type = {System Architecture}
 }
 
 @inproceedings{xin2020self,
@@ -58,7 +63,8 @@
   pages = {931-940},
   year = {2020},
   doi = {10.1145/3397271.3401147},
-  keywords = {self-supervised learning, reinforcement learning, recommender systems}
+  keywords = {self-supervised learning, reinforcement learning, recommender systems},
+  type = {User Interaction and Feedback}
 }
 
 @inproceedings{sun2019bert4rec,
@@ -68,7 +74,8 @@
   pages = {1441-1450},
   year = {2019},
   doi = {10.1145/3357384.3357895},
-  keywords = {BERT, sequential recommendation, transformers}
+  keywords = {BERT, sequential recommendation, transformers},
+  type = {User Interaction and Feedback}
 }
 
 @article{fayyaz2020recommendation,
@@ -80,7 +87,8 @@
   pages = {7748},
   year = {2020},
   doi = {10.3390/app10217748},
-  keywords = {recommendation systems, algorithms, challenges, metrics, business opportunities}
+  keywords = {recommendation systems, algorithms, challenges, metrics, business opportunities},
+  type = {General Surveys and Challenges}
 }
 
 @inproceedings{wang2019neural,
@@ -90,7 +98,8 @@
   pages = {165-174},
   year = {2019},
   doi = {10.1145/3331184.3331267},
-  keywords = {graph neural networks, collaborative filtering, recommendation systems}
+  keywords = {graph neural networks, collaborative filtering, recommendation systems},
+  type = {General Surveys and Challenges}
 }
 
 @article{zhang2019deep,
@@ -102,5 +111,6 @@
   pages = {1-38},
   year = {2019},
   doi = {10.1145/3285029},
-  keywords = {deep learning, recommender systems, survey}
+  keywords = {deep learning, recommender systems, survey},
+  type = {General Surveys and Challenges}
 }
