--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1,8 +1,8 @@
 @inproceedings{he2017neural,
   author = {He, Xiangnan and Liao, Lizi and Zhang, Hanwang and Nie, Liqiang and Hu, Xia and Chua, Tat-Seng},
-  title = {Neural collaborative filtering},
+  title = {Neural Collaborative Filtering},
   booktitle = {Proceedings of the 26th International Conference on World Wide Web},
-  pages = {173-182},
+  pages = {173--182},
   year = {2017},
   doi = {10.1145/3038912.3052569},
   keywords = {neural networks, collaborative filtering, recommendation systems},
@@ -11,9 +11,9 @@
 
 @inproceedings{liang2018variational,
   author = {Liang, Dawen and Krishnan, Rahul G and Hoffman, Matthew D and Jebara, Tony},
-  title = {Variational autoencoders for collaborative filtering},
+  title = {Variational Autoencoders for Collaborative Filtering},
   booktitle = {Proceedings of the 2018 World Wide Web Conference},
-  pages = {689-698},
+  pages = {689--698},
   year = {2018},
   doi = {10.1145/3178876.3186150},
   keywords = {autoencoders, collaborative filtering, recommendation systems},
@@ -22,9 +22,9 @@
 
 @inproceedings{rendle2020neural,
   author = {Rendle, Steffen and Krichene, Walid and Zhang, Li and Anderson, John},
-  title = {Neural collaborative filtering vs. matrix factorization revisited},
+  title = {Neural Collaborative Filtering vs. Matrix Factorization Revisited},
   booktitle = {Fourteenth ACM Conference on Recommender Systems},
-  pages = {240-248},
+  pages = {240--248},
   year = {2020},
   doi = {10.1145/3383313.3412488},
   keywords = {neural collaborative filtering, matrix factorization, recommendation systems},
@@ -33,9 +33,9 @@
 
 @inproceedings{he2020lightgcn,
   author = {He, Xiangnan and Deng, Kuan and Wang, Xiang and Li, Yan and Zhang, Yuyi and Wang, Meng},
-  title = {LightGCN: Simplifying and powering graph convolution network for recommendation},
+  title = {LightGCN: Simplifying and Powering Graph Convolution Network for Recommendation},
   booktitle = {Proceedings of the 43rd International ACM SIGIR Conference on Research and Development in Information Retrieval},
-  pages = {639-648},
+  pages = {639--648},
   year = {2020},
   doi = {10.1145/3397271.3401063},
   keywords = {LightGCN, graph convolution networks, recommendation systems},
@@ -44,12 +44,12 @@
 
 @inproceedings{chen2021graph,
   author = {Chen, Chen and Ma, Wenjie and Zhang, Min and Wang, Chenyang and Liu, Yiqun and Ma, Shaoping},
-  title = {Graph heterogeneous multi-relational recommendation},
+  title = {Graph Heterogeneous Multi-relational Recommendation},
   booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
   series = {AAAI},
   volume = {35},
   number = {5},
-  pages = {3958-3966},
+  pages = {3958--3966},
   year = {2021},
   doi = {10.1609/aaai.v35i5.16523},
   keywords = {heterogeneous graphs, multi-relational recommendation, graph neural networks},
@@ -60,7 +60,7 @@
   author = {Xin, Xin and Karatzoglou, Alexandros and Arapakis, Ioannis and Jose, Joemon M},
   title = {Self-Supervised Reinforcement Learning for Recommender Systems},
   booktitle = {Proceedings of the 43rd International ACM SIGIR Conference on Research and Development in Information Retrieval},
-  pages = {931-940},
+  pages = {931--940},
   year = {2020},
   doi = {10.1145/3397271.3401147},
   keywords = {self-supervised learning, reinforcement learning, recommender systems},
@@ -69,9 +69,9 @@
 
 @inproceedings{sun2019bert4rec,
   author = {Sun, Fei and Liu, Jun and Wu, Jian and Pei, Chaochao and Lin, Xiao and Ou, Wenwu and Jiang, Peng},
-  title = {BERT4Rec: Sequential recommendation with bidirectional encoder representations from transformer},
+  title = {BERT4Rec: Sequential Recommendation with Bidirectional Encoder Representations from Transformer},
   booktitle = {Proceedings of the 28th ACM International Conference on Information and Knowledge Management},
-  pages = {1441-1450},
+  pages = {1441--1450},
   year = {2019},
   doi = {10.1145/3357384.3357895},
   keywords = {BERT, sequential recommendation, transformers},
@@ -80,7 +80,7 @@
 
 @article{fayyaz2020recommendation,
   author = {Fayyaz, Zahra and Ebrahimian, Mahdi and Nawara, Deena and Ibrahim, Ahmed and Kashef, Rabab},
-  title = {Recommendation systems: Algorithms, challenges, metrics, and business opportunities},
+  title = {Recommendation Systems: Algorithms, Challenges, Metrics, and Business Opportunities},
   journal = {Applied Sciences},
   volume = {10},
   number = {21},
@@ -93,9 +93,9 @@
 
 @inproceedings{wang2019neural,
   author = {Wang, Xiang and He, Xiangnan and Wang, Meng and Feng, Fuli and Chua, Tat-Seng},
-  title = {Neural graph collaborative filtering},
+  title = {Neural Graph Collaborative Filtering},
   booktitle = {Proceedings of the 42nd International ACM SIGIR Conference on Research and Development in Information Retrieval},
-  pages = {165-174},
+  pages = {165--174},
   year = {2019},
   doi = {10.1145/3331184.3331267},
   keywords = {graph neural networks, collaborative filtering, recommendation systems},
@@ -104,11 +104,11 @@
 
 @article{zhang2019deep,
   author = {Zhang, Shuai and Yao, Lina and Sun, Aixin and Tay, Yi},
-  title = {Deep learning based recommender system: A survey and new perspectives},
+  title = {Deep Learning Based Recommender System: A Survey and New Perspectives},
   journal = {ACM Computing Surveys (CSUR)},
   volume = {52},
   number = {1},
-  pages = {1-38},
+  pages = {1--38},
   year = {2019},
   doi = {10.1145/3285029},
   keywords = {deep learning, recommender systems, survey},
