--- a/data/references.bib
+++ b/data/references.bib
@@ -42,8 +42,8 @@
   type = {Algorithmic Advancements}
 }
 
-@inproceedings{chen2021graph,
-  author = {Chen, Chen and Ma, Wenjie and Zhang, Min and Wang, Chenyang and Liu, Yiqun and Ma, Shaoping},
+@inproceedings{Deng2021graph,
+  author = {Deng, A., & Hooi},
   title = {Graph Heterogeneous Multi-relational Recommendation},
   booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
   series = {AAAI},
